# wallet-service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 867ada9e557b_add_wallet_model.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: wallets.py
app/core/: config.py
app/db/: session.py
app/models/: wallet.py
app/schemas/: wallet.py
app/services/: wallet.py
tests/: conftest.py  test_wallets.py
